# averager

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  setup.py  testing.py  tox.ini
.github/: dependabot.yml  labels.yaml
.github/workflows/: bump.yml  publish.yml  repo-config.yml  test.yml
averager/: __init__.py  _utils.py
averager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  index.rst  requirements.txt
src/averager/: __init__.py  _utils.py
tests/: average_test.py  init_test.py  median_test.py  mode_test.py  optional_int_test.py  test_average.py  test_median.py  test_mode.py  test_optional_int.py  test_weighted_average.py  weighted_average_test.py
