[tool.poetry]
name = "averager"
version = "3.0.0"
description = "Simple utilities for calculating averages"
authors = ["Ben Soyka <bensoyka@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
blue = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
testpaths = ["averager", "tests"]
addopts = "--doctest-modules"
